<resources>
    <string name="app_name">FutureTip</string>
    <string name="app_designed_by">Designed by Mukund</string>
    <string name="tab_title_main_1">Daily Self Help</string>
    <string name="tab_title_main_2">Expert Corner</string>
    <string name="focus_on_question">Relax, focus and pick the card below</string>
    <string name="come_back_tomorrow">Please come back tomorrow for a new reading</string>
    <string name="love_card_title">Love Reading</string>
    <string name="career_card_title">Career Reading</string>
    <string name="health_card_title">Health Reading</string>
    <string name="family_card_title">Family Reading</string>
    <string name="week_card_title">Week Reading</string>
    <string name="month_card_title">Month Reading</string>
    <string name="half_year_card_title">Half year Reading</string>
    <string name="year_card_title">Year Reading</string>
    <string name="main_card_subtitle"></string>
    <string name="main_card_button_1">ACTION 1</string>
    <string name="main_card_button_2">ACTION 2</string>
    <string name="love_card_details">Find your path with your loved ones</string>
    <string name="career_card_details">Know your career choices better</string>
    <string name="family_card_details">Insights into family well being</string>
    <string name="health_card_details">Align your mental and physical self</string>
    <string name="week_card_details">Let an expert interpret your week.</string>
    <string name="year_card_details">Let an expert interpret your year.</string>
    <string name="half_year_card_details">Let an expert interpret your next 6 months.</string>
    <string name="month_card_details">Let an expert interpret your month.</string>
    <string name="destiny_text">Destiny - Forces around you</string>
    <string name="karma_text">Karma - What you can do</string>
    <string name="career_destiny_death">Big change or end of a chapter, new beginning.</string>
    <string name="career_karma_death">A radical shift in your environment can bring up many mixed feelings. It is time to put them aside and go with the flow. The environment is encouraging you to change your own conditions. Look around and get rid of unwanted relationships and emotions and start afresh.</string>
    <string name="love_destiny_death">Big change or end of a chapter, new beginning. </string>
    <string name="love_karma_death">A radical shift in your environment can bring up many mixed feelings. It is time to put them aside and go with the flow. The environment is encouraging you to change your own conditions. Look around and get rid of unwanted relationships and emotions and start afresh.</string>
    <string name="health_destiny_death">Big change or end of a chapter, new beginning.</string>
    <string name="health_karma_death">A radical shift in your environment can bring up many mixed feelings. It is time to put them aside and go with the flow. The environment is encouraging you to change your own conditions. Look around and get rid of unwanted clutter and start afresh.</string>
    <string name="family_destiny_death">Big change or end of a chapter, new beginning.</string>
    <string name="family_karma_death">A radical shift in your environment can bring up many mixed feelings. It is time to put them aside and go with the flow. The environment is encouraging you to change your own conditions.</string>
    <string name="career_destiny_eight_cups">Leaving temptation/passion in a quest for something more. Needs emotional strength </string>
    <string name="career_karma_eight_cups">Gain emotional strength from focusing on what you\'re going to achieve rather than what you\'re leaving behind. Don\'t succumb to the bad times as the sun rises every morning, and it gives you a chance to take away the darkness</string>
    <string name="love_destiny_eight_cups">Leaving temptation/passion in a quest for something more. Needs emotional strength </string>
    <string name="love_karma_eight_cups">Don\'t lose hope. Hope is important for you to achieve what you\'re looking for. Have some loved one to support you emotionally through these times</string>
    <string name="health_destiny_eight_cups">Leaving temptation/passion in a quest for something more. Needs emotional strength</string>
    <string name="health_karma_eight_cups">Don\'t lose hope. Hope is important for you to achieve what you\'re looking for. Keep good health and focus on not letting yourself down too much. Start/keep up health regimes. They\'ll benefit in due time</string>
    <string name="family_destiny_eight_cups">Leaving temptation/passion in a quest for something more. Needs emotional strength</string>
    <string name="family_karma_eight_cups"> Don\'t lose hope. Hope is important for you to achieve what you\'re looking for. Have some loved one to support you emotionally through these times</string>
    <string name="career_destiny_eight_pents">Hard work, Descipline, Consistency, Greed, Feeling of effort going in vain and less money for a lot of work.</string>
    <string name="career_karma_eight_pents"> Find time outside work to get away and relax. Life dominated by greed to succeed has its side effects. Spend more time in finding out what you love and trying to find out if you can make money out of it. This can bring a good balance to your perception of work and money.</string>
    <string name="love_destiny_eight_pents">Hard work, Descipline, Consistency, Greed, Feeling of effort going in vain.</string>
    <string name="love_karma_eight_pents">Love is like a monument. You need to work hard to bring it to shape. Be consistent in your efforts</string>
    <string name="health_destiny_eight_pents">Hard work, Descipline, Consistency, Greed, Feeling of effort going in vain.</string>
    <string name="health_karma_eight_pents">Life is like a monument. You need to work hard to bring it to shape. Be consistent in your efforts</string>
    <string name="family_destiny_eight_pents">Hard work, Descipline, Consistency, Greed, Feeling of effort going in vain.</string>
    <string name="family_karma_eight_pents">Family is like a monument. You need to work hard to bring it to shape. Be consistent in your efforts</string>
    <string name="career_destiny_eight_swords">Surrounded by problems, need the intelligence, guile and strength to move forward. </string>
    <string name="career_karma_eight_swords">We do feel trapped and isolated sometimes. The only way out is through determination and not through abandonement of the problems. Pray for strength to solve the problems, not for the problems to go away.</string>
    <string name="love_destiny_eight_swords">Surrounded by problems, need the intelligence, guile and strength to move forward. </string>
    <string name="love_karma_eight_swords">We do feel trapped and isolated sometimes. The only way out is through determination and not through abandonement of the problems. Pray for strength to solve the problems, not for the problems to go away.</string>
    <string name="health_destiny_eight_swords">Surrounded by problems, need the intelligence, guile and strength to move forward. </string>
    <string name="health_karma_eight_swords">We do feel trapped and isolated sometimes. The only way out is through determination and not   through abandonement of the problems. </string>
    <string name="family_destiny_eight_swords">Surrounded by problems, need the intelligence, guile and strength to move forward.</string>
    <string name="family_karma_eight_swords">We do feel trapped and isolated sometimes. The only way out is through determination and not   through abandonement of the problems. </string>
    <string name="career_destiny_eight_wands">Exciting time to be experimenting. Situations are leaving you "no time" for yourself. Events are happening fast around you. </string>
    <string name="career_karma_eight_wands">Build intelligence and strength to deal with unexpected events in this fast paced time. Be excited and go where the flow takes you, but exercise caution</string>
    <string name="love_destiny_eight_wands">Exciting time for love. Emotions will move quicker than ever, so keep control.</string>
    <string name="love_karma_eight_wands">Build intelligence and strength to deal with unexpected events in this fast paced time. Be excited and go where the flow takes you, but exercise caution with rushing feelings</string>
    <string name="health_destiny_eight_wands">Feel motivated to stay healthy. A good time to start a regime as the body will respond quickly.</string>
    <string name="health_karma_eight_wands"> Build intelligence and strength to deal with unexpected health issues in this fast paced time. Be excited and go where the flow takes you, but maintian caution</string>
    <string name="family_destiny_eight_wands">Fast paced life can result in family and close relations being ignored. Situations are favorable for quick catchups.</string>
    <string name="family_karma_eight_wands">Catch up with friends and family and make quick resolves. Be cautious for misunderstandings, don\'t rush with people\'s feelings or yours.</string>
    <string name="career_destiny_five_cups">Crying over losses and not realizing the passions still in possession. Lesson over taking emotions for granted.</string>
    <string name="career_karma_five_cups">Be hopeful and grateful. Opportunities will come but you have to learn your lessons. Don\'t waste time worrying about the past and move forward, learning from the mistakes and being grateful for what you have.</string>
    <string name="love_destiny_five_cups">Crying over losses and not realizing the passions still in possession. Lesson over taking emotions for granted</string>
    <string name="love_karma_five_cups"> Be hopeful and grateful. Understand that loving and respecting oneself is the most important thing. Know that ups and downs are part of life. This too shall pass</string>
    <string name="health_destiny_five_cups">Crying over losses and not realizing the passions still in possession. Lesson over taking emotions for granted.</string>
    <string name="health_karma_five_cups">Don\'t let the situations get the best of you. Disappointments are part of life and are essential for a drive to be better. Don\'t waste time on lost opportunities and move on so you can make the future better</string>
    <string name="family_destiny_five_cups">Crying over losses and not realizing the passions still in possession. Lesson over taking emotions for granted.</string>
    <string name="family_karma_five_cups">Be hopeful and grateful. Understand that loving and respecting oneself is the most important thing. Know that ups and downs are part of life. This too shall pass.</string>
    <string name="career_destiny_five_pents">A disappointment gives teaching. Health and money pose problems.</string>
    <string name="career_karma_five_pents">Be cautious of overspending or risky investments. Find refuge in family and togetherness instead of seeking monetary satisfaction.</string>
    <string name="love_destiny_five_pents">A disappointment gives teaching. Health and money pose problems.</string>
    <string name="love_karma_five_pents">Seek comfort from all the problems in togetherness. Focus on relationships/friendships as they can act as a refuge from the problems</string>
    <string name="health_destiny_five_pents">A disappointment gives teaching. Health and money issues arise or continue.</string>
    <string name="health_karma_five_pents">Seek comfort in loved ones. Keep caring people close.</string>
    <string name="family_destiny_five_pents">A disappointment gives teaching. Health and money issues arise or continue.</string>
    <string name="family_karma_five_pents">Family is the ultimate savior. Keep close with loved ones and seek their help to heal. Find comfort in togetherness.</string>
    <string name="career_destiny_five_swords">A teaching on overconfidence </string>
</resources>