<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_expert_month"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:layout_marginBottom="@dimen/main_card_margin_vertical"
    android:layout_marginStart="@dimen/main_card_margin_horizontal"
    android:layout_marginEnd="@dimen/main_card_margin_horizontal"
    android:layout_marginTop="@dimen/main_card_margin_vertical"
    android:foreground="?attr/selectableItemBackground"
    card_view:cardCornerRadius="@dimen/card_recycler_corner_radius"
    card_view:cardElevation="@dimen/card_recycler_elevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/gradient_background"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_card_main_1_title"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_title_margin"
            android:layout_marginEnd="@dimen/card_title_margin"
            android:layout_marginTop="@dimen/card_title_margin"
            android:text="@string/career_card_title"
            android:textColor="@color/neon_blue" />

        <TextView
            android:id="@+id/tv_card_main1_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_card_main_1_title"
            android:layout_marginStart="@dimen/card_subtitle_margin"
            android:layout_marginEnd="@dimen/card_subtitle_margin"
            android:layout_marginTop="@dimen/card_button_margin"
            android:text="@string/main_card_subtitle" />

        <TextView
            android:id="@+id/tv_card_main1_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_card_main1_subtitle"
            android:layout_marginStart="@dimen/card_subtitle_margin"
            android:layout_marginEnd="@dimen/card_subtitle_margin"
            android:layout_marginTop="@dimen/card_button_margin"
            android:text="@string/career_card_details"
            android:textColor="@color/sharp_yellow" />

        <ImageView
            android:id="@+id/img_card_main_3"
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:scaleType="fitXY" />

    </RelativeLayout>
</android.support.v7.widget.CardView>